--- a/user-onboarding/src/App.css
+++ b/user-onboarding/src/App.css
@@ -1,33 +1,58 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 400px;
+  width: 400px;
+  margin-left: 100px;
+  margin-top: 100px;
+  background: rgb(197, 197, 197);
+  padding: 20px;
+  border-right: 30px solid rgb(167, 45, 45);
+  border-radius: 15px 0 0 15px;
 }
 
-.App-link {
-  color: #61dafb;
+form input {
+  width: 80%;
+  padding: 10px;
+  margin: 10px 0px 10px 0px;
+  box-shadow: 3px 3px 3px rgb(99, 98, 98);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.checkbox-container input {
+  width: 10%;
+  box-shadow: none;
+}
+
+button {
+  width: 20%;
+  margin-left: 35%;
+  margin-top: 40px;
+  height: 30px;
+  width: 90px;
+  box-shadow: 3px 3px 3px rgb(99, 98, 98);
+}
+
+.error {
+  color: red;
+  margin-left: 5px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.login-form {
+  display: flex;
+}
+
+.user-list {
+  width: 600px;
+  height: 400px;
+  background: rgb(197, 197, 197);
+  margin-top: 100px;
+  margin-left: 50px;
+  border-left: 30px solid rgb(167, 45, 45);
+  border-radius: 0 15px 15px 0;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
